# SolinBlog

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  TEST.md  build.rs  docker-compose.yml  功能树.md
front/: 404.html  README.md  example.css  header.html  index.html  markdown.html  token-generator.html
public/: README.md
public/prompt/: HTML.xml  PPLX.xml  README.md
src/: config.rs  image.rs  lib.rs  main.rs  store.rs  web.rs
src/mcp/: dto.rs  mod.rs  server.rs  tools.rs
src/server/: assets.rs  handlers.rs  middleware.rs  mod.rs
