[package]
name = "SolinBlog"
version = "0.1.0"
edition = "2024"

[lib]
name = "solin_blog"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
pinyin = "0.10"
pulldown-cmark = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.2"
percent-encoding = "2"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
rmcp = { version = "0.3", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-worker",
    "schemars",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { version = "0.7" }
axum = { version = "0.8", features = ["macros"] }
schemars = "1"
mime_guess = "2"

[build-dependencies]
image = { version = "0.25", default-features = false, features = [
    "gif",
    "jpeg",
    "png",
    "tiff",
    "webp",
    "bmp",
] }
